--- a/view_one_page.css
+++ b/view_one_page.css
@@ -89,3 +89,14 @@ body{
 	top:50%;
 	left:50%;
 }
+
+.custom-menu {
+  z-index:1000;
+  position: absolute;
+  background-color:#C0C0C0;
+  border: 1px solid black;
+  padding: 2px;
+  cursor: pointer;
+  min-width: 100px;
+  text-align: center;
+}
