--- a/view_one_page.css
+++ b/view_one_page.css
@@ -1,5 +1,4 @@
 body{
-  overflow:hidden;
   background-color:#D5E8EA;
 }
 
@@ -99,4 +98,39 @@ body{
   cursor: pointer;
   min-width: 100px;
   text-align: center;
+}
+
+.inline-block {
+  display: inline-block;
+  padding: 5px;
+}
+
+ul {
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+  position: relative;
+}
+li {
+  list-style-type: none;
+  border-left: 2px solid #000;
+  margin-left: 1em;
+}
+li div {
+  padding-left: 1em;
+  position: relative;
+}
+li div::before {
+  content:'';
+  position: absolute;
+  top: 0;
+  left: -2px;
+  bottom: 50%;
+  width: 0.75em;
+  border: 2px solid #000;
+  border-top: 0 none transparent;
+  border-right: 0 none transparent;
+}
+ul > li:last-child {
+  border-left: 2px solid transparent;
 }
